# ai-chatbot-withapikey

./: pyproject.toml  requirements.txt
langchainbasics/: langchainbasics.ipynb  qachatbot.py
